# film-manager-implementation/api/openapi.yaml
@@ -1,4 +1,3 @@
----
 openapi: 3.0.1
 info:
   title: Film Manager
@@ -304,6 +303,24 @@ paths:
         '500':
           description: Internal Server Error
           content: {}
+    put:
+      tags:
+      - api/films/public/invited
+      security:
+      - cookieAuth: []
+      summary: Accept all pending review invitations
+      description: Accepts all pending invitations for the logged-in user in a single operation.
+      operationId: acceptAllInvitedFilms
+      responses:
+        '204':
+          description: Successful operation - No Content
+          content: {}
+        '401':
+          description: Unauthorized
+          content: {}
+        '500':
+          description: Internal Server Error
+          content: {}
   "/api/films/public/{filmId}":
     get:
       tags:
@@ -492,6 +509,13 @@ paths:
         schema:
           type: integer
         description: ID of the requested page (if absent, the first page is returned)'
+      - in: query
+        name: invitationStatus
+        required: false
+        schema:
+          type: string
+          enum: [pending, accepted, cancelled, expired]
+        description: Filter by invitation status (only for owner)
       responses:
         '200':
           description: Successful operation
@@ -938,6 +962,14 @@ components:
           type: boolean
           description: true if the review has been completed, false otherwise
           default: 'false'
+        invitationStatus:
+          type: string
+          enum: [pending, accepted, cancelled, expired]
+          description: The status of the review invitation
+        expirationDate:
+          type: string
+          format: date-time
+          description: The expiration date/time for the invitation to be accepted
         reviewDate:
           type: string
           format: date
